# MLcompiler

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  VISION.md
compiler/: CMakeLists.txt  main.cpp
compiler/codegen/: CMakeLists.txt
compiler/codegen/cpu/: CMakeLists.txt  cpu_codegen.cpp  cpu_codegen.hpp
compiler/codegen/metal/: CMakeLists.txt  metal_codegen.cpp  metal_codegen.hpp
compiler/coreml/: CMakeLists.txt  README.md  coreml_matmul_probe.mm  gen_layer_model.py  gen_matmul_model.py  mlx_matmul_probe.cpp
compiler/frontends/: CMakeLists.txt  frontend.cpp  frontend.hpp  ggml_types.hpp  gguf_loader.cpp  gguf_loader.hpp  gguf_to_ir.cpp  gguf_to_ir.hpp  gguf_utils.cpp  gguf_utils.hpp
compiler/ir/: CMakeLists.txt  ir.cpp  ir.hpp  ir_builder.cpp  ir_builder.hpp
compiler/mlir/: CMakeLists.txt
compiler/mlir/dialect/: CMakeLists.txt  MLCBase.td  MLCDialect.cpp  MLCDialect.h  MLCOps.cpp  MLCOps.h  MLCOps.td
compiler/mlir/emit/: CMakeLists.txt  GGUFToMLIR.cpp  GGUFToMLIR.h
compiler/mlir/exec/: ANELayer.h  ANELayer.mm  ANEMatMul.h  ANEMatMul.mm  CMakeLists.txt  FusedKernels.cpp  FusedKernels.h  MLIRExecutor.cpp  MLIRExecutor.h  MLXBuilder.cpp  MLXBuilder.h  MLXQuantize.cpp  MLXQuantize.h  Q4MatMul.cpp  Q4MatMul.h  Quantize.cpp  Quantize.h
compiler/mlir/passes/: CMakeLists.txt  FuseNormMatMul.cpp  FuseNormMatMul.h  FuseQKVMatMul.cpp  FuseQKVMatMul.h  ScheduleDevices.cpp  ScheduleDevices.h
compiler/mlir/tools/mlc-compile-run/: CMakeLists.txt  mlc-compile-run.cpp
compiler/mlir/tools/mlc-emit/: CMakeLists.txt  mlc-emit.cpp
compiler/mlir/tools/mlc-kernel-bench/: CMakeLists.txt  mlc-kernel-bench.cpp
compiler/mlir/tools/mlc-opt/: CMakeLists.txt  mlc-opt.cpp
compiler/mlx_bridge/: CMakeLists.txt  mlx_matmul_test.cpp
compiler/passes/: CMakeLists.txt  architecture_hint_pass.cpp  architecture_hint_pass.hpp  layout_normalization_pass.cpp  layout_normalization_pass.hpp  matmul_fusion_pass.cpp  matmul_fusion_pass.hpp  passes.cpp  passes.hpp  tiling_pass.cpp  tiling_pass.hpp
compiler/pipeline/: ir_pipeline.cpp  ir_pipeline.hpp
compiler/runtime/: CMakeLists.txt  attention_cpu.cpp  attention_cpu.hpp  batched_executor.cpp  batched_executor.hpp  batched_walker.cpp  batched_walker.hpp  decode_runner.cpp  decode_runner.hpp  execution_context.cpp  execution_context.hpp  execution_executor.cpp  execution_executor.hpp  execution_graph.cpp  execution_graph.hpp  execution_plan_builder.cpp  execution_plan_builder.hpp  float_convert.hpp  kernel_registry.cpp  kernel_registry.hpp  kernel_scheduler.cpp  kernel_scheduler.hpp  metal_runtime.hpp  metal_runtime.mm  model_runner.cpp  model_runner.hpp  operator_backend.cpp  operator_backend.hpp  paged_kv.cpp  paged_kv.hpp  parity_harness.cpp  parity_harness.hpp  quant_utils.cpp  quant_utils.hpp  quantization.cpp  quantization.hpp  runtime.cpp  runtime.hpp  sampling.cpp  sampling.hpp  (+7 more)
compiler/util/: cli_helpers.cpp  cli_helpers.hpp
docs/: architecture.md  compiler-path-u1.md  compiler-path-u4.md  compiler-path-v1.md  compiler-path-v2.md  compiler-path-v3.md  compiler-path-v4.md  compiler-path-v5.md  lessons.md
python/: .gitkeep
scripts/: run_metal_tests_local.sh
tests/: CMakeLists.txt  gguf_test_utils.hpp  test_batched_elementwise.cpp  test_batched_executor.cpp  test_batched_paged_g1.cpp  test_batched_walker_h1.cpp  test_codegen.cpp  test_execution_graph.cpp  test_frontend.cpp  test_gguf_integration.cpp  test_gguf_loader.cpp  test_gguf_to_ir.cpp  test_gguf_values.cpp  test_ir.cpp  test_ir_pipeline.cpp  test_output_weight_transpose.cpp  test_paged_flash.cpp  test_paged_kv.cpp  test_passes.cpp  test_runtime.cpp  test_scheduler.cpp  test_scheduler_e2e.cpp
tests/mlir/: test_ane_layer.cpp  test_ane_matmul.cpp  test_batch_executor.cpp  test_compiler_path_forward.cpp  test_dialect_roundtrip.sh  test_emit_tinyllama.sh  test_fused_executor.cpp  test_fused_kernels.cpp  test_mlx_matmul_lowering.cpp  test_mlx_metal_kernel_smoke.cpp  test_mlx_quant_native.cpp  test_mlx_quant_roundtrip.cpp  test_norm_matmul_fusion.cpp  test_q4_kernel.cpp  test_q4_kernel_multi.cpp  test_schedule_devices.cpp  tinyllama_layer.mlir
tools/: README.md  llamacpp_dump_activations.cpp  metal_diag.mm  metal_hazard_test.mm  mlc_dump_kv_cache.cpp  paged_flash_bench.cpp
tools/demo/: index.html
